--- a/structure.html
+++ b/structure.html
@@ -18,7 +18,7 @@
 <body>
     <div class="main">
         <div class="div1">
-            <h1>Kigali yacu</h1>
+            <h1>Kigali</h1>
              <P>IWACU kuntango</P>
         </div>
     </div>
